feat: add agent proto defined
