# internal/server/grpc.go
@@ -1,20 +1,24 @@
 package server
 
 import (
-	v1 "agent/api/helloworld/v1"
-	"agent/internal/conf"
-	"agent/internal/service"
-
 	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/metadata"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
+	"github.com/go-kratos/kratos/v2/middleware/tracing"
 	"github.com/go-kratos/kratos/v2/transport/grpc"
+
+	v1 "github.com/omalloc/agent/api/agent"
+	"github.com/omalloc/agent/internal/conf"
+	"github.com/omalloc/agent/internal/service"
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, agent *service.AgentService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
+			tracing.Server(),
+			metadata.Server(),
 		),
 	}
 	if c.Grpc.Network != "" {
@@ -27,6 +31,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
+	v1.RegisterAgentServer(srv, agent)
 	return srv
 }
